pp2/y.output
Terminals unused in grammar

   T_Void
   T_Class
   T_LessEqual
   T_GreaterEqual
   T_Equal
   T_NotEqual
   T_And
   T_Or
   T_Null
   T_Extends
   T_This
   T_Interface
   T_Implements
   T_While
   T_For
   T_If
   T_Else
   T_Return
   T_Break
   T_New
   T_NewArray
   T_Print
   T_ReadInteger
   T_ReadLine
   T_StringConstant
   T_IntConstant
   T_DoubleConstant
   T_BoolConstant


Gram'atica

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: VarDecl ';'

    5 VarDecl: Var

    6 Var: Type T_Identifier

    7 Type: T_Int
    8     | T_Double
    9     | T_Bool
   10     | T_String
   11     | T_Identifier
   12     | Type T_Dims


Terminales con las reglas donde aparecen

$end (0) 0
';' (59) 4
error (256)
T_Void (258)
T_Bool (259) 9
T_Int (260) 7
T_Double (261) 8
T_String (262) 10
T_Class (263)
T_LessEqual (264)
T_GreaterEqual (265)
T_Equal (266)
T_NotEqual (267)
T_Dims (268) 12
T_And (269)
T_Or (270)
T_Null (271)
T_Extends (272)
T_This (273)
T_Interface (274)
T_Implements (275)
T_While (276)
T_For (277)
T_If (278)
T_Else (279)
T_Return (280)
T_Break (281)
T_New (282)
T_NewArray (283)
T_Print (284)
T_ReadInteger (285)
T_ReadLine (286)
T_Identifier (287) 6 11
T_StringConstant (288)
T_IntConstant (289)
T_DoubleConstant (290)
T_BoolConstant (291)


No terminales con las reglas donde aparecen

$accept (38)
    en la izquierda: 0
Program (39)
    en la izquierda: 1, en la derecha: 0
DeclList (40)
    en la izquierda: 2 3, en la derecha: 1 2
Decl (41)
    en la izquierda: 4, en la derecha: 2 3
VarDecl (42)
    en la izquierda: 5, en la derecha: 4
Var (43)
    en la izquierda: 6, en la derecha: 5
Type (44)
    en la izquierda: 7 8 9 10 11 12, en la derecha: 6 12


State 0

    0 $accept: . Program $end

    T_Bool        desplazar e ir al estado 1
    T_Int         desplazar e ir al estado 2
    T_Double      desplazar e ir al estado 3
    T_String      desplazar e ir al estado 4
    T_Identifier  desplazar e ir al estado 5

    Program   ir al estado 6
    DeclList  ir al estado 7
    Decl      ir al estado 8
    VarDecl   ir al estado 9
    Var       ir al estado 10
    Type      ir al estado 11


State 1

    9 Type: T_Bool .

    $default  reduce usando la regla 9 (Type)


State 2

    7 Type: T_Int .

    $default  reduce usando la regla 7 (Type)


State 3

    8 Type: T_Double .

    $default  reduce usando la regla 8 (Type)


State 4

   10 Type: T_String .

    $default  reduce usando la regla 10 (Type)


State 5

   11 Type: T_Identifier .

    $default  reduce usando la regla 11 (Type)


State 6

    0 $accept: Program . $end

    $end  desplazar e ir al estado 12


State 7

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Bool        desplazar e ir al estado 1
    T_Int         desplazar e ir al estado 2
    T_Double      desplazar e ir al estado 3
    T_String      desplazar e ir al estado 4
    T_Identifier  desplazar e ir al estado 5

    $default  reduce usando la regla 1 (Program)

    Decl     ir al estado 13
    VarDecl  ir al estado 9
    Var      ir al estado 10
    Type     ir al estado 11


State 8

    3 DeclList: Decl .

    $default  reduce usando la regla 3 (DeclList)


State 9

    4 Decl: VarDecl . ';'

    ';'  desplazar e ir al estado 14


State 10

    5 VarDecl: Var .

    $default  reduce usando la regla 5 (VarDecl)


State 11

    6 Var: Type . T_Identifier
   12 Type: Type . T_Dims

    T_Dims        desplazar e ir al estado 15
    T_Identifier  desplazar e ir al estado 16


State 12

    0 $accept: Program $end .

    $default  aceptar


State 13

    2 DeclList: DeclList Decl .

    $default  reduce usando la regla 2 (DeclList)


State 14

    4 Decl: VarDecl ';' .

    $default  reduce usando la regla 4 (Decl)


State 15

   12 Type: Type T_Dims .

    $default  reduce usando la regla 12 (Type)


State 16

    6 Var: Type T_Identifier .

    $default  reduce usando la regla 6 (Var)
